# arture

./: .dockerignore  .eslintrc.json  .gitignore  .prettierrc  .seed-progress.json  AI_SETUP.md  Dockerfile  LICENSE  arture-export.json  components.json  docker-compose.yml  fix.js  jest.config.ts  jest.setup.ts  next.config.mjs  nyxbui.json  package-lock.json  package.json  tailwind.config.ts  test-fabric-load.ts  test-fabric-load2.ts  test-fabric-name.ts  test-fabric-name2.ts  test-fabric-pattern.ts  test-pattern.ts  test-sanitize.ts  tsconfig.json  vercel.json
.cursor/rules/: mcp-tools-priority.mdc
.github/workflows/: ci.yml  test.yml
__tests__/api/: health.test.ts
__tests__/components/: Canvas.test.tsx
__tests__/integration/: app.test.ts
__tests__/utils/: canvas-utils.test.ts
prisma/: schema.prisma
public/wasm/: arture_wasm.js  arture_wasm_bg.wasm
scripts/: seed-elements.ts  sync-cloudinary.ts
src/: middleware.ts  middleware.ts.disabled  proxy.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: auth-dialog.tsx  auth-guard.tsx  button.tsx  cta-section.tsx  features-section.tsx  footer.tsx  hero.tsx  logged-in-home.tsx  navbar.tsx  pricing-section.tsx  recent-designs.tsx  select.tsx  shap-landing-hero.tsx  sidebar.tsx  template-card.tsx  time-picker.tsx
src/contexts/: agent-flow-context.tsx  drag-context.tsx
src/hooks/: assets.hooks.ts  projects.hooks.ts  templates.hooks.ts  useAdvancedZoom.ts  useAgentContext.ts  useAgentFlow.ts  (+23 more)
wasm/: .wasm-pack.toml  Cargo.toml
wasm/src/: filters.rs  gpu.rs  lib.rs  shaders.rs  utils.rs
(+201 files in other folders)
